[package]
name = "collection_coin_curve_v2"
version = "0.1.0"
edition = "2021"

[lib]
name = "collection_coin_curve_v2"
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"

[features]
default = []
anchor-debug = []
cpi = ["no-entrypoint"]
custom-heap = []
custom-panic = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token", "associated_token"] }
solana-sha256-hasher = "3.1.0"